--- a/.travis.yml
+++ b/.travis.yml
@@ -48,10 +48,11 @@ install:
         source source_bat.bash 'C:\Program Files (x86)\Microsoft Visual Studio\2017\BuildTools\VC\Auxiliary\Build\vcvars64.bat'
         choco source add -n=ros-win -s="https://roswin.azurewebsites.net/api/v2" --priority=1
         choco install ros-melodic-ros_base -y --execution-timeout=0
+        choco install clapack
+        choco install console_bridge
         source source_bat.bash 'c:\opt\ros\melodic\x64\setup.bat'
         rosdep install --from-paths src --ignore-src -r -y
         /c/opt/vcpkg/vcpkg.exe install jsoncpp:x64-windows
-        /c/opt/vcpkg/vcpkg.exe install clapack:x64-windows
     fi
 script:
   - if [ "$TRAVIS_OS_NAME" != "windows" ]; then .ci_config/travis.sh; fi
