--- a/descartes_light/cmake/descartes_light-config.cmake.in
+++ b/descartes_light/cmake/descartes_light-config.cmake.in
@@ -21,3 +21,4 @@ if(NOT TARGET OpenMP::OpenMP_CXX)
 endif()
 
 include("${CMAKE_CURRENT_LIST_DIR}/@PROJECT_NAME@-targets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/descartes_light_macros.cmake")
