--- a/.github/workflows/bionic_build.yml
+++ b/.github/workflows/bionic_build.yml
@@ -1,4 +1,4 @@
-name: Bionic-Build
+name: Ubuntu-Bionic
 
 on:
   push:
@@ -9,44 +9,32 @@ on:
     - cron: '0 5 * * *'
 
 jobs:
-  industrial_ci:
-    name: Melodic
-    runs-on: ubuntu-latest
-    env:
-      CI_NAME: Bionic-Build
-      OS_NAME: ubuntu
-      OS_CODE_NAME: bionic
-      ROS_DISTRO: melodic
-      ROS_REPO: main
-      UPSTREAM_WORKSPACE: 'dependencies.rosinstall'
-      ROSDEP_SKIP_KEYS: "iwyu ros_industrial_cmake_boilerplate"
-      CCACHE_DIR: "/home/runner/work/descartes_light/descartes_light/Bionic-Build/.ccache"
-      TARGET_CMAKE_ARGS: "-DCMAKE_BUILD_TYPE=Debug -DDESCARTES_ENABLE_TESTING=ON"
+  ci:
+    name: Ubuntu-Bionic
+    runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v1
-
-      - name: Free Disk Space
-        run: |
-          sudo swapoff -a
-          sudo rm -f /swapfile
-          sudo apt clean
-          docker rmi $(docker image ls -aq)
-          df -h
-
-      - name: Prepare ccache timestamp
-        id: ccache_cache_timestamp
-        shell: cmake -P {0}
-        run: |
-          string(TIMESTAMP current_date "%Y-%m-%d-%H;%M;%S" UTC)
-          message("::set-output name=timestamp::${current_date}")
-
-      - name: ccache cache files
-        uses: actions/cache@v1.1.0
+      - name: Checkout repository
+        uses: actions/checkout@master
         with:
-          path: ${{ env.CI_NAME }}/.ccache
-          key: ${{ env.CI_NAME }}-ccache-${{ steps.ccache_cache_timestamp.outputs.timestamp }}
-          restore-keys: |
-            ${{ env.CI_NAME }}-ccache-
+          path: src/descartes_light
 
-      - uses: 'ros-industrial/industrial_ci@master'
-        env: ${{env}}
+      - name: Install dependencies
+        run: |
+          sudo apt update -q
+          sudo apt install -q -y clang-tidy python3 python3-pip python3-setuptools
+          sudo pip3 install -q --upgrade pip
+          sudo pip3 install -q colcon-common-extensions rosdep vcstool
+          sudo rosdep init -q
+          rosdep update -q
+          vcs import src < src/descartes_light/dependencies.rosinstall
+          rosdep install --from-paths src --ignore-src -r -y -q
+
+      - name: Build
+        run: |
+          colcon build --event-handlers console_direct+ --cmake-args -DCMAKE_BUILD_TYPE=Release -DDESCARTES_ENABLE_TESTING=ON -DDESCARTES_ENABLE_CLANG_TIDY=ON
+          if [ $? -ne 0 ]; then exit 1; fi
+
+      - name: Test
+        run: |
+          colcon test --event-handlers console_direct+ --return-code-on-test-failure
+          colcon test-result
